--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "boutique_project_next": "file:",
+    "jwt-decode": "^4.0.0",
     "next": "15.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
