stripe  /  sass integration  /  warning fix  /

--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@nextui-org/react": "^2.6.11",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
+    "@stripe/stripe-js": "^7.3.0",
     "boutique_project_next": "file:",
     "jwt-decode": "^4.0.0",
     "next": "15.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sass": "^1.89.0",
+    "stripe": "^18.1.1",
     "three": "^0.176.0"
   },
   "devDependencies": {
