--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.1.2",
     "@stripe/stripe-js": "^7.3.0",
     "boutique_project_next": "file:",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "next": "15.3.0",
     "react": "^19.1.0",
